Fix broken "English" label in language-popover
CSS layout uses .popover-layout mixin, which fits the contents in a
pre-specified width (defaults to 260px). Popover classes include this
mixin so children widths are calculated during compile-time using Less
arithmetic expansions.

If a text node overflows the container word-wrapping rules would emerge
and cause this bug. Currently, offset calculations are implied by the
triangle arrow positioning stuff, which moves the popover container to
the right (using negative left offset) while moving the arrow (using
positive right offset). To preserve the correct layout, popover block
width should be known in prior.

We can avoid these calculations (still retaining current look-and-feel)
by re-aligning the arrow, setting the .language-popover left offset to
zero and using CSS transformations to translate the whole block to the
left by the half of its width. It would allow as not to rely on a fixed
width, so the box model will expand the blocks as necessary to fit the
text nodes - on my screen it allows language names up to 16 narrow
chars (like 'a') or 10 wide chars ('A').

Closes-Bug: 1522341

--- a/nailgun/static/styles/main.less
+++ b/nailgun/static/styles/main.less
@@ -895,10 +895,16 @@ input[type=range] {
     }
   }
 
+  .setWidth(width) when not (@width = 0) {
+    width: @width;
+  }
+  .setWidth(width) when (@width = 0) {
+    width: inherit;
+  }
   @default-popover-width: 260px;
   @default-arrow-offset: 10px;
   .popover-layout(@index, @width: @default-popover-width) {
-    width: @width;
+    .setWidth(width);
     @navbar-icon-width: @navbar-icon-size + @navbar-icon-spacing;
     @popover-right-align-offset: @navbar-icon-width * @navbar-icon-count - @width;
     @popover-center-align-offset: @popover-right-align-offset - @navbar-icon-width * @index  + @width / 2 - @navbar-icon-size / 2;
@@ -914,7 +920,14 @@ input[type=range] {
     .notifications-popover {.popover-layout(@index: 0)}
     .user-popover {.popover-layout(@index: 1)}
     .statistics-popover {.popover-layout(@index: 2, @width: 230px)}
-    .language-popover {.popover-layout(@index: 3, @width: 110px)}
+    .language-popover {
+      .popover-layout(@index: 3, @width: 0);
+      transform: translate(-50%, 0);
+      > .arrow {
+        left: 50%;
+        margin-left: -(@default-arrow-offset+1);
+      }
+    }
   }
 
   &.without-auth {
@@ -1054,7 +1067,7 @@ input[type=range] {
     }
   }
   & > a {
-    padding-left: 25px;
+    padding-left: 14px;
     line-height: 1.2;
     color: @navbar-color-active;
     font-weight: 600;
